--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -1,5 +1,7 @@
 \begin{abstract}
 
+% Contenido del informe, objetivos generales, motivación, resultados y conclusiones más importantes
+
     En este informe se desarrolla un cargador para baterías de litio de 36V de diferentes capacidades,
     describiendo las decisiones tomadas durante la etapa de diseño,
     tanto los avances como los problemas enfrentados,
