--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -1,6 +1,7 @@
 \section{Conclusiones}
 
 % EMPEZAR CON LAS COSAS BUENAS: Se logró, se implementó, ...
+% Recomendaciones 
 
 La tensión de salida no se mantiene estable ante variaciones en la carga con ciclo de trabajo y tensión de alimentación fija. 
 Esto puede deberse a que se consideró el modelo ideal de todos los componentes del circuito al momento de realizar el análisis del conversor. 
