--- a/sections/introduccion.tex
+++ b/sections/introduccion.tex
@@ -1,5 +1,7 @@
 \section{Introducción}
 
+% Objetivos específicos. Contenido de los capítulos o secciones 
+% Finaliza con un párrafo que resuma el contenido del informe
 El proyecto surge de la necesidad de cargar la batería de una bicicleta eléctrica con asistencia al pedaleo,
 complementando los proyectos realizados por los alumnos de la cátedra Proyecto Final durante el año 2021.
 
