--- a/sections/marco_teorico.tex
+++ b/sections/marco_teorico.tex
@@ -2,6 +2,8 @@
 
 En esta sección se presenta el desarrollo llevado a cabo para lograr los objetivos propuestos, haciendo énfasis en los aspectos teóricos que fundamentan el proyecto.
 
+\subsection{Fuentes de Alimentación}
+
 Para poder utilizar un transformador pequeño y cumplir con las especificaciones normalmente se requieren conversiones de etapas múltiples.
 Las fuentes de potencia otorgan una alta densidad de potencia en un tamaño y con un peso reducido.  
 Además, permiten aislar eléctricamente a la carga de la red de alimentación. 
@@ -255,8 +257,6 @@ reductor, por lo que el rizado de la tensión de salida también será el mismo:
 
 $$  $$
 
-Rizado de la tensión de salida
-
 En el análisis anterior hemos supuesto ripple de salida nulo, es decir, que el capacitor de salida era muy grande para que la tensión
 de salida fuese constante. En la práctica no será posible mantener perfectamente constante la
 tensión de salida con una capacidad finita. La variación periódica de la tensión de salida, o rizado,
@@ -297,12 +297,10 @@ La tensión en el secundario del transformador es una forma de onda pulsante. La
 la inductancia magnetizante cuando el interruptor está cerrado es devuelta a la fuente de
 entrada a través de un tercer devanado del transformador cuando el interruptor está abierto.
 
-\subsection{Comparación con el convertidor flyback}
-
-El convertidor forward requiere de una carga mínima para evitar un exceso en la tensión de salida. 
+En comparación con el convertidor flyback, el convertidor forward requiere de una carga mínima para evitar un exceso en la tensión de salida. 
 Como el transformador no almacena energía, para un mismo nivel de potencia de salida, 
 el tamaño del mismo es menor en el convertidor forward que en el flyback. 
-La corriente de salida es aproximadamente constante ya que el ripple disminuye notablemente 
+Además, la corriente de salida es aproximadamente constante ya que el ripple disminuye notablemente 
 debido al agregado del inductor en la salida y al diodo de rueda libre D1.
 Por esto mismo, el capacitor de salida puede ser más pequeño. 
 
@@ -313,8 +311,6 @@ por los esfuerzos de tensión y corriente a los que se somete el transistor de p
 El convertidor forward de doble switch puede ser utilizado con potencias de hasta 750W. 
 A partir de los diodos D3 y D4 en el primario, se reduce la tensión de colector en los transistores cuando los mismos 
 se encuentran apagados, lo cual permite utilizar transistores de menores prestaciones.
-
-\subsubsection{Funcionamiento}
 
 Los transistores se encienden y se apagan de forma simultánea, lo cual los diferencia de las topologías bridge. 
 Cuando los transistores están encendidos, la tensión en el primario del transformador es igual a la tensión de entrada $V_s$. 
@@ -436,7 +432,7 @@ Son capaces de generar hasta $200mA$ de salida.
 % REVISAR SI ES DEL TL494 O ES UNA NOTA AL TUN TUN
 % Transformador: permite que no circule corriente continua por su secundario. 
 
-\subsubsection{Amplificador Clase B con transistores complementarios}
+\subsection{Amplificador Clase B con transistores complementarios}
 
 Sin esta etapa de amplificación, dado que la carga que generaba el circuito sobre el TL494 era muy alta, 
 la forma de onda PWM se distorsionaba y disminuía su amplitud notablemente, lo que causaba que los MOSFETs no se saturaran y aumentaran demasiado su temperatura.
@@ -467,6 +463,168 @@ Los transistores conducen de forma alternativa.
 Cuando la tensión de entrada en la base de ambos transistores es 0 no conduce ningún transistor. 
 Esto implica que no existe consumo de corriente ni de potencia. 
 La Vce de ambos transistores va de $V_{cc}$ a 0.
+
+\subsection{Driver}
+
+Los MOSFET se encargan de conectar la alimentación con la carga. El IRF840 es un MOSFET de canal N. 
+Para encenderlo se debe aplicar una tensión positiva entre Gate y Source. 
+Debido a la configuración de convertidor elegida, se requiere un driver para controlar el MOSFET cuyo terminal de \textit{source} no está a tierra. Se optó por un driver con transformador acoplador ya que provee aislación galvánica entre el circuito de control y el circuito de potencia \cite{gatedrivers}.
+
+Existen 2 posibles configuraciones para un transistor según su posición en el circuito:
+
+Low side: utiliza comúnmente el MOSFET de canal N. 
+El terminal Source está a tierra y la carga se encuentra entre la alimentación y el terminal Drain. 
+Mientras está encendido le otorga a la carga el camino hacia la tierra y cuando está apagado se sitúa debajo de la misma. 
+
+High Side: utiliza comúnmente el MOSFET de canal P. 
+El terminal Drain se encuentra conectado a la alimentación y el terminal Source a la carga. 
+
+% INSERTAR FIGURA DE GOOGLE!
+
+Para controlar high side MOSFETs se puede utilizar un circuito integrado o un transformador. 
+Los circuitos integrados, si bien son más pequeños y ocupan menor espacio en las placas, 
+poseen tiempos significativos de encendido y apagado. 
+El transformador es de un tamaño mucho mayor, requiere de un diseño apropiado y de componentes adicionales,
+ pero sus tiempos de encendido y apagado son despreciables y permite operar con diferencias de tensión más elevadas.
+
+Los transformadores poseen al menos 2 bobinados acoplados magnéticamente, 
+lo cual permite generar aislación entre el circuito primario y secundario. 
+La relación de vueltas entre los mismos permite modificar la tensión de salida obtenida. 
+Los transformadores manejan muy poca potencia promedio, pero entregan altos picos de corriente en el encendido y apagado.
+
+Si bien el transformador ideal no almacena energía, los transformadores reales 
+almacenan una pequeña cantidad de energía entre los bobinados y los posibles huecos de aire presentes en el mismo. 
+Esto se representa mediante una inductancia magnetizante. 
+Una pequeña inductancia minimiza la energía almacenada permitiendo aumentar la eficiencia y disminuye los retrasos de tiempo. 
+
+Para cumplir con la ley de Faraday, la tensión en la bobina del transformador debe ser nula en una parte del período, 
+por lo cual cualquier pequeña señal de continua puede hacer saturar al núcleo. 
+La saturación limita el producto volt-segundo aplicado a través de los devanados. 
+Su valor máximo se da en la peor condición de funcionamiento con el ciclo de trabajo máximo y la tensión de entrada máxima simultáneamente. 
+
+Como el convertidor forward trabaja sólo en el primer cuadrante del plano B-H, una gran parte del período de switching debe reservarse para restaurar el núcleo de la potencia del transformador. 
+Esto limita la relación de trabajo del transformador, pero no suele ser un problema ya que 
+el transformador debe estar acoplado a corriente alterna y por lo tanto funciona con magnetización bidireccional. 
+
+La figura X muestra el circuito básico del driver mediante un transformador. 
+
+INSERTAR FIGURA 33: Single-Ended Transformer-Coupled Gate Drive
+
+A continuación se detalla información relevante de cada componente: 
+
+1)Entrada single-ended de un controlador PWM.
+
+2) Capacitor de acoplamiento Cc1
+
+Para evitar la componente continua se coloca un capacitor de acoplamiento en serie con el bobinado primario, 
+evitando la saturación del núcleo. La tensión sobre el mismo resulta: 
+
+Vcc1=D*Vdrv
+
+En base al máximo ripple de tensión permitido y la carga que atraviesa a los capacitores de acoplamiento en estado estacionario:
+
+INSERTAR FÓRMULA DE CC1
+
+Para este capacitor, el ripple tiene una componente relacionada a la carga del MOSFET, 
+otra relacionada con la corriente que pasa por la resistencia entre Gate y Source 
+y una última componente relacionada a la corriente de la inductancia magnetizante. 
+La capacidad es máxima para un ciclo de trabajo determinado definido por los parámetros de diseño 
+y los valores de los componentes y se obtiene derivando a la expresión en función del ciclo. 
+
+Constante de tiempo de la tensión en el capacitor de acoplamiento:
+
+INSERTAR FÓRMULA
+
+Para anchos pulsos del ciclo de trabajo, se requieren de componentes adicionales 
+en el secundario del transformador para proveer de la tensión correcta al Gate. 
+La tensión a través del capacitor de acoplamiento se incrementa de forma proporcional al pulso. 
+La tensión negativa durante el tiempo que está apagado aumenta y la tensión positiva durante el tiempo que está encendido disminuye. 
+
+INSERTAR FORMA DE ONDA SOBRE EL CAPACITOR (SE SACA DEL ESQUEMÁTICO DADO)
+
+3) Resistencia de amortiguamiento Rc
+
+Cambios repentinos en el ciclo de trabajo excitan a la red LC compuesta por el capacitor de acoplamiento 
+y la inductancia magnetizante, provocando resonancias indeseadas en la tensión sobre el capacitor. 
+Esta resistencia de bajo valor en serie con el capacitor de acoplamiento permite amortiguar las resonancias. 
+
+Rc>=2*sqrt(Lm/Cc1)
+
+Si la resistencia es muy grande, genera una sobre amortiguación que limita la corriente que ingresa al terminal Gate y disminuye la frecuencia de switching. 
+Si la resistencia es muy chica, las resonancias provocadas generan una tensión entre Gate y Source muy elevada.
+
+4) Resistencia de carga entre Gate y Source Rgs
+
+Resistencia de pull down: Pone a tierra el terminal Gate al alimentar el circuito, manteniendo al MOSFET apagado durante el inicio. 
+Además le provee de un camino para la corriente que circula por el capacitor de acoplamiento, 
+permitiendo establecer la tensión necesaria sobre el mismo y que en cada ciclo de switching 
+la misma carga del Gate sea entregada y removida a través del capacitor. 
+
+5) Diodo Schottky 
+
+Debido a la componente de corriente de la inductancia magnetizante, la salida debe manejar corriente de forma bidireccional. 
+Por ello se requiere un diodo Schottky a la entrada. 
+El mismo puede evitarse aumentando la componente de corriente resistiva para contrarrestar a la componente de la inductancia magnetizante. 
+
+6) Capacitor de acoplamiento Cc2  
+
+Se agrega un segundo capacitor de acoplamiento que permite restaurar a los niveles originales de tensión. 
+El agregado opcional de un diodo zener en serie permite incremetar aún más la tensión negativa durante el apagado. 
+
+En base al máximo ripple de tensión permitido y la carga que atraviesa a los capacitores de acoplamiento en estado estacionario:
+
+INSERTAR FÓRMULA DE CC2 
+CORREGIR DE LA FÓRMULA: ES VDRV Y NO VDRC
+
+Para este capacitor, el ripple tiene una componente relacionada a la carga del MOSFET 
+y otra relacionada con la corriente que pasa por la resistencia entre Gate y Source. 
+La capacidad es máxima cuando el ciclo de trabajo es máximo. 
+
+7) Diodo clamp
+
+Evita sobre tensiones.
+
+
+Diseño del transformador:
+
+Su diseño es similar a un transformador de potencia. 
+Su función es transmitir el pulso de accionamiento de puerta referenciado a tierra a través de grandes diferencias de potencial para adaptarse a las implementaciones de accionamiento flotante. Para hacerlo maneja muy poca potencia pero requiere de elevados picos de corriente. 
+
+Su relación será 1:1 ya que no se requiere.......
+
+Está controlado por un ancho de pulso variable y de amplitud constante.
+
+Está acoplado a CA y la inductancia de magnetización ve un pulso de amplitud variable.
+
+Operan en el primer y tercer cuadrante del plano B-H.
+
+Primero se selecciona el núcleo. En base a la disponibilidad se elige el E25. 
+El material del núcleo es ferrita de alta permeabilidad para maximizar el valor de 
+la inductancia de magnetización y, en consecuencia, reducir la corriente de magnetización.
+
+Número de vueltas del primario: 
+
+INSERTAR FÓRMULA DEL NÚMERO DE VUELTAS JUNTO A LA DESCRIPCIÓN DE CADA variable
+
+Primero se halla el numerador con:
+
+INSERTAR IMÁGEN 36: Gate-Drive Transformer Volt-second Product vs. Duty Ratio
+
+Para un circuito acoplado de CA, el peor de los casos es D = 0,5, 
+mientras que el acoplamiento directo alcanza el valor pico de voltios por segundo en la máxima relación de trabajo operativa. 
+Curiosamente, el acoplamiento de CA reduce el producto volt-segundo de estado estacionario máximo en un factor de cuatro debido a que, 
+en relaciones de trabajo grandes, el voltaje del transformador se reduce proporcionalmente debido al voltaje que 
+se desarrolla a través del capacitor de acoplamiento.
+Delta B: valor pico a pico del cambio en el flujo que se produce durante la duración del pulso. 
+
+Es mucho más difícil calcular $\Delta B$ en la ecuación Np. 
+La razón es el desplazamiento del flujo durante el funcionamiento transitorio. 
+Cuando el voltaje de entrada o la carga cambian rápidamente, el controlador PWM ajusta la relación de trabajo en consecuencia. 
+Es bastante difícil deducir el resultado cuantitativo exacto de la caminata de flujo. 
+Depende de la respuesta del lazo de control y de la constante de tiempo de la red de acoplamiento cuando está presente. 
+En general, una respuesta de bucle más lenta y una constante de tiempo más rápida tienden a reducir el desplazamiento de flujo. 
+Para la mayoría de los diseños, es deseable un margen de tres a uno entre la densidad de flujo de saturación 
+y el valor de flujo máximo en el peor de los casos de operación en estado estable para cubrir la operación transitoria.
 
 \subsection{Snubber}
 
