--- a/sections/marco_teorico.tex
+++ b/sections/marco_teorico.tex
@@ -709,9 +709,11 @@ La figura \ref{fig:driver} muestra el circuito básico del driver mediante un tr
 
 A continuación se detalla información relevante de cada componente: 
 
-1)Entrada single-ended de un controlador PWM.
+\paragraph{Entrada single-ended} 
 
-2) Capacitor de acoplamiento Cc1
+Este driver en particular está diseñado para convertir la salida de un extremo de un controlador PWM a una señal de doble extremo. % Traduccion de mierda
+
+\paragraph{Capacitor de acoplamiento $C_{C_1}$}
 
 Para evitar la componente continua se coloca un capacitor de acoplamiento en serie con el bobinado primario, 
 evitando la saturación del núcleo. La tensión sobre el mismo resulta: 
@@ -740,7 +742,7 @@ La tensión negativa durante el tiempo que está apagado aumenta y la tensión p
 
 %INSERTAR FORMA DE ONDA SOBRE EL CAPACITOR (SE SACA DEL ESQUEMÁTICO DADO)
 
-3) Resistencia de amortiguamiento Rc
+\paragraph{Resistencia de amortiguamiento $R_C$}
 
 Cambios repentinos en el ciclo de trabajo excitan a la red LC compuesta por el capacitor de acoplamiento 
 y la inductancia magnetizante, provocando resonancias indeseadas en la tensión sobre el capacitor. 
@@ -751,20 +753,20 @@ $$ R_c\geq2\cdot\sqrt{\frac{L_m}{C_{C_1}}} $$
 Si la resistencia es muy grande, genera una sobre amortiguación que limita la corriente que ingresa al terminal \textit{gate} y disminuye la frecuencia de switching. 
 Si la resistencia es muy chica, las resonancias provocadas generan una tensión entre \textit{gate} y \textit{source} muy elevada.
 
-4) Resistencia de carga entre \textit{gate} y \textit{source} $R_{gs}$
+\paragraph{Resistencia de carga entre \textit{gate} y \textit{source} $R_{gs}$}
 
-Resistencia de pull down: Pone a tierra el terminal \textit{gate} al alimentar el circuito, manteniendo al MOSFET apagado durante el inicio. 
+Es una resistencia de pull down que pone a tierra el terminal \textit{gate} al alimentar el circuito, manteniendo al MOSFET apagado durante el inicio. 
 Además le provee de un camino para la corriente que circula por el capacitor de acoplamiento, 
 permitiendo establecer la tensión necesaria sobre el mismo y que en cada ciclo de switching 
 la misma carga del \textit{gate} sea entregada y removida a través del capacitor. 
 
-5) Diodo Schottky 
+\paragraph{Diodo Schottky}
 
 Debido a la componente de corriente de la inductancia magnetizante, la salida debe manejar corriente de forma bidireccional. 
 Por ello se requiere un diodo Schottky a la entrada. 
 El mismo puede evitarse aumentando la componente de corriente resistiva para contrarrestar a la componente de la inductancia magnetizante. 
 
-6) Capacitor de acoplamiento $C_{C_2}$  
+\paragraph{Capacitor de acoplamiento $C_{C_2}$}
 
 Se agrega un segundo capacitor de acoplamiento que permite restaurar a los niveles originales de tensión. 
 El agregado opcional de un diodo zener en serie permite incremetar aún más la tensión negativa durante el apagado. 
@@ -779,44 +781,42 @@ Para este capacitor, el ripple tiene una componente relacionada a la carga del M
 y otra relacionada con la corriente que pasa por la resistencia entre \textit{gate} y \textit{source}. 
 La capacidad es máxima cuando el ciclo de trabajo es máximo. 
 
-7) Diodo clamp
+\paragraph{Diodo clamp}
 
-Evita sobre tensiones.
+%Evita sobre tensiones. <<< Esto era así? No evitaba tension negativa a la salida?
+Mantiene la tensión entre \textit{gate} y \textit{source} por arriba de $-V_\gamma$.\\
 
-
-Diseño del transformador:
+\subsubsection{Diseño del transformador}
 
 Su diseño es similar a un transformador de potencia. 
 Su función es transmitir el pulso de accionamiento de puerta referenciado a tierra a través de grandes diferencias de potencial para adaptarse a las implementaciones de accionamiento flotante. Para hacerlo maneja muy poca potencia pero requiere de elevados picos de corriente. 
 
-Su relación será 1:1 ya que no se requiere.......
-
-Está controlado por un ancho de pulso variable y de amplitud constante.
-
-Está acoplado a CA y la inductancia de magnetización ve un pulso de amplitud variable.
-
+Su relación será 1:1 ya que no se requiere cambiar el nivel de tensión.
+Está controlado por un ancho de pulso variable y de amplitud constante,
+acoplado a CA y la inductancia de magnetización ve un pulso de amplitud variable.
 Operan en el primer y tercer cuadrante del plano B-H.
 
 Primero se selecciona el núcleo. En base a la disponibilidad se elige el E25. 
 El material del núcleo es ferrita de alta permeabilidad para maximizar el valor de 
 la inductancia de magnetización y, en consecuencia, reducir la corriente de magnetización.
 
-Número de vueltas del primario: 
+El número de vueltas del primario se calcula como: 
 
-INSERTAR FÓRMULA DEL NÚMERO DE VUELTAS JUNTO A LA DESCRIPCIÓN DE CADA variable
+%INSERTAR FÓRMULA DEL NÚMERO DE VUELTAS JUNTO A LA DESCRIPCIÓN DE CADA variable
+
 
 Primero se halla el numerador con:
 
-INSERTAR IMÁGEN 36: Gate-Drive Transformer Volt-second Product vs. Duty Ratio
+%INSERTAR IMÁGEN 36: Gate-Drive Transformer Volt-second Product vs. Duty Ratio
 
-Para un circuito acoplado de CA, el peor de los casos es D = 0,5, 
+Para un circuito acoplado de CA, el peor de los casos es $D=0.5$, 
 mientras que el acoplamiento directo alcanza el valor pico de voltios por segundo en la máxima relación de trabajo operativa. 
 Curiosamente, el acoplamiento de CA reduce el producto volt-segundo de estado estacionario máximo en un factor de cuatro debido a que, 
 en relaciones de trabajo grandes, el voltaje del transformador se reduce proporcionalmente debido al voltaje que 
 se desarrolla a través del capacitor de acoplamiento.
-Delta B: valor pico a pico del cambio en el flujo que se produce durante la duración del pulso. 
+%Delta B: valor pico a pico del cambio en el flujo que se produce durante la duración del pulso. 
 
-Es mucho más difícil calcular $\Delta B$ en la ecuación Np. 
+Es mucho más difícil calcular $\Delta B$ en la ecuación $N_p$. 
 La razón es el desplazamiento del flujo durante el funcionamiento transitorio. 
 Cuando el voltaje de entrada o la carga cambian rápidamente, el controlador PWM ajusta la relación de trabajo en consecuencia. 
 Es bastante difícil deducir el resultado cuantitativo exacto de la caminata de flujo. 
