Cambios parciales con imagenes de simulaciones

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage{lscape}
 \usepackage{geometry}
 \usepackage{amsmath}
+\usepackage{svg}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
