--- a/sections/marco_teorico.tex
+++ b/sections/marco_teorico.tex
@@ -809,7 +809,7 @@ En general, una respuesta de bucle más lenta y una constante de tiempo más rá
 Para la mayoría de los diseños, es deseable un margen de tres a uno entre la densidad de flujo de saturación 
 y el valor de flujo máximo en el peor de los casos de operación en estado estable para cubrir la operación transitoria.
 
-\subsection{Snubber}
+\subsection{Snubber} \label{subsec:oscilaciones}
 
 Un circuito snubber o de amortiguación es una red RC que permite eliminar ruido de alta frecuencia que existe en los nodos de los transistores.
 Hasta ahora se ha analizado el convertidor forward sin tener en cuenta los elementos parásitos asociados a cada componente. 
